# fastapi_todo

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: db.py  main.py
api/cruds/: task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: task.py
api/test/: conftest.py  test_tasks.py
