[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = ""
authors = ["Yuki Kashihara"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
